ajustes no layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,13 @@
     <app-sign-in />
   </div>
 </header>
-<main></main>
-<footer></footer>
+<main>
+  f
+</main>
+<footer>
+  <div class="container">
+    <app-navbar />
+    <span>Projeto feito por Yan Gabriel</span>
+
+  </div>
+</footer>
