--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,5 +10,15 @@
 .container {
   max-width: 1120px;
   margin: 0 auto;
+  padding: 0 1rem;
 }
 
+app-root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  main {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+}
