--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,7 @@
     <app-sign-in />
   </div>
 </header>
-<main>
-  f
-</main>
+<router-outlet />
 <footer>
   <div class="container">
     <app-navbar />
