--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav>
-  <a href="" class="active">
+  <a routerLink="/" class="active">
     <span>Home</span>
   </a>
-  <a href="">
+  <a routerLink="/catalog">
     <span>Catálogo</span>
   </a>
 </nav>
