--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -1,8 +1,8 @@
 .card {
   display: flex;
   flex-direction: column;
-  flex-shrink: 0;
   max-width: 13rem;
+  height: 100%;
   border-radius: 0.25rem;
   overflow: hidden;
   cursor: pointer;
