--- a/src/app/shared/container-card/container-card.component.scss
+++ b/src/app/shared/container-card/container-card.component.scss
@@ -5,7 +5,8 @@
   max-width: 100%;
 }
 
-.left-arrow, .right-arrow{
+.left-arrow,
+.right-arrow {
   display: flex;
   align-items: center;
   user-select: none;
@@ -14,75 +15,77 @@
   height: 100%;
   width: 6rem;
   div {
-      padding: 2vmin;
-      background-color: rgb(51 51 51 / 0.5);
-      border-radius: 9999px;
-      margin-left: -0.5rem;
-      cursor: pointer;
-      &:hover{
-          background-color: rgb(51 51 51 / 0.8);
-      }
-      @media (min-width: 768px) {
-          margin-left: -1.5rem;
-      }
+    padding: 2vmin;
+    background-color: rgb(51 51 51 / 0.5);
+    border-radius: 9999px;
+    margin-left: -0.5rem;
+    cursor: pointer;
+    &:hover {
+      background-color: rgb(51 51 51 / 0.8);
+    }
+    @media (min-width: 768px) {
+      margin-left: -1.5rem;
+    }
   }
-  img{
-      width: 3vmin;
+  img {
+    width: 3vmin;
   }
 
   @media (max-width: 480px) {
-      display: none;
+    display: none;
   }
 }
 
 .left-arrow {
-  background: linear-gradient(to right, #232323 10%, rgba(35, 35, 35, 0.00) 100%);
+  background: linear-gradient(to right, #232323 10%, rgba(35, 35, 35, 0) 100%);
   div {
-      margin-left: -0.5rem;
-      @media (min-width: 768px) {
-          margin-left: -1.5rem;
-      }
+    margin-left: -0.5rem;
+    @media (min-width: 768px) {
+      margin-left: -1.5rem;
+    }
   }
-  img{
-      transform: rotate(180deg);
+  img {
+    transform: rotate(180deg);
   }
-
 }
 .right-arrow {
-  background: linear-gradient(to left,  #232323 10%, rgba(35, 35, 35, 0.00) 100%);
+  background: linear-gradient(to left, #232323 10%, rgba(35, 35, 35, 0) 100%);
   justify-content: flex-end;
   right: 0px;
   div {
-      margin-right: -0.5rem;
-      @media (min-width: 768px) {
-          margin-right: -1.5rem;
-      }
+    margin-right: -0.5rem;
+    @media (min-width: 768px) {
+      margin-right: -1.5rem;
+    }
   }
 }
 
-.container-card{
+.container-card {
   display: flex;
   gap: 1rem;
   overflow-x: scroll;
   overflow-y: clip;
   width: 100%;
-  padding: .75rem 2rem .75rem 0;
+  padding: 0.75rem 2rem 0.75rem 0;
   position: relative;
   z-index: 10;
   scroll-snap-type: x mandatory;
 }
 
-
 .container-card::-webkit-scrollbar {
   height: 6px;
-  background: #1E1E1E;
+  background: #1e1e1e;
   border-radius: 1000px;
 
   @media (max-width: 480px) {
-      height: 4px;
+    height: 4px;
   }
 }
 .container-card::-webkit-scrollbar-thumb {
   background: #990100;
   border-radius: 1000px;
+}
+
+::ng-deep app-card {
+  flex-shrink: 0;
 }
