--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ app-root {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  app-home, app-catalog {
+  app-home, app-catalog, app-search-results {
     display: flex;
     flex-grow: 1;
     flex-shrink: 1;
