construção da query

--- a/src/app/shared/container-card/container-card.component.html
+++ b/src/app/shared/container-card/container-card.component.html
@@ -1,5 +1,5 @@
 <div class="container-main">
-  <div class="left-arrow" (click)="handleScrollLeft()" #leftArrow>
+  <div class="left-arrow" (mousedown)="handleScrollLeft()" (mouseup)="handleMouseUp()" #leftArrow>
     <div>
       <img src="/arrow.svg" alt="left" height="18" width="18" />
     </div>
@@ -7,7 +7,7 @@
   <div class="container-card" (scroll)="onScroll()" #containerCard>
     <ng-content select="app-card"></ng-content>
   </div>
-  <div class="right-arrow" (click)="handleScrollRight()">
+  <div class="right-arrow" (mousedown)="handleScrollRight()" (mouseup)="handleMouseUp()">
     <div>
       <img src="/arrow.svg" alt="left" height="18" width="18" />
     </div>
