play de assistir o filme

--- a/src/app/modules/catalog/catalog.component.html
+++ b/src/app/modules/catalog/catalog.component.html
@@ -47,5 +47,6 @@
       </app-container-card>
     </div>
   </section>
-  @if(movies) {<app-modal [movie]="movies[0]" />}
+  <!-- @if(movies) {<app-modal [movie]="movies[0]" />} -->
+   <div #modal></div>
 </main>
