--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="openModal()">
   <figure class="image">
     <img [src]="movie.poster.url" [alt]="movie.poster.alt" />
   </figure>
