--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -1,11 +1,11 @@
-@if (false) {
+@if (viewMovie) {
 <section class="section-modal">
   <div
     [style]="'background-color: ' + movie.main_color + 'B1;'"
     class="container-film"
   >
-    <img src="/close.svg" alt="X" height="20" width="20" />
-    <div class="film"></div>
+    <img src="/close.svg" alt="X" height="20" width="20" (click)="closeModal()"/>
+    <div class="film" #iframeDiv></div>
   </div>
 </section>
 } @else {
@@ -19,7 +19,7 @@
     #containerModal
   >
     <header>
-      <img src="/close.svg" alt="X" height="20" width="20" />
+      <img src="/close.svg" alt="X" height="20" width="20" (click)="closeModal()"/>
     </header>
     <div>
       <figure class="post">
@@ -61,13 +61,14 @@
           </div>
           }
         </div>
-        <button class="btn">
+        <button class="btn" (click)="watchMovie()">
           <img
             src="/play.svg"
             alt="play"
             width="16"
             height="20"
             class="mt-px"
+
           />
           Assistir
         </button>
