--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,18 @@
-<header>
-  <div class="container">
-    <div>
-      <img src="/logo.svg" alt="logo" />
-      <app-navbar />
+<section>
+  <header>
+    <div class="container">
+      <div>
+        <img src="/logo.svg" alt="logo" />
+        <app-navbar />
+      </div>
+      <app-sign-in />
     </div>
-    <app-sign-in />
-  </div>
-</header>
-<router-outlet />
-<footer>
-  <div class="container">
-    <app-navbar />
-    <span>Projeto feito por Yan Gabriel</span>
-
-  </div>
-</footer>
+  </header>
+  <router-outlet />
+  <footer>
+    <div class="container">
+      <app-navbar />
+      <span>Projeto feito por Yan Gabriel</span>
+    </div>
+  </footer>
+</section>
