--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,11 @@
+section {
+  overflow-x: hidden;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 header {
   background: #333333;
 
@@ -36,6 +44,10 @@ footer {
   }
 
   footer {
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
+    width: 100%;
     span {
       display: none;
     }
