--- a/src/app/modules/search-results/search-results.component.scss
+++ b/src/app/modules/search-results/search-results.component.scss
@@ -98,7 +98,7 @@ main {
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
-  padding: 0.75rem 0;
+  padding: 0.75rem 0 4rem;
   justify-content: space-evenly;
   width: 100%;
   @media (min-width: 664px) {
