--- a/src/app/shared/sign-in/sign-in.component.scss
+++ b/src/app/shared/sign-in/sign-in.component.scss
@@ -1,13 +1,20 @@
 button {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   background: #282828;
-  color: #E8E8E8;
-  padding: .5rem 1.25rem;
+  color: #e8e8e8;
+  padding: 0.5rem 1rem;
   border-radius: 4rem;
   border: none;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 500;
   cursor: pointer;
   &:hover {
     background: #282828;
   }
+}
+
+img {
+  height: 1.2rem;
 }
